@@ -1,4 +1,5 @@
 import Engine.Object2d;
+import Engine.Rectangle;
 import Engine.ShaderProgram;
 import Engine.Window;
 import org.joml.Vector3f;
@@ -18,6 +19,7 @@ public class Main {
     private Window window =  new Window(800,800,"Hello World!");
 
     ArrayList<Object2d> objects = new ArrayList<>();
+    ArrayList<Rectangle> objectsRectangle = new ArrayList<>();
 
 
     public void init(){
@@ -41,37 +43,56 @@ public class Main {
 //            )
 //        );
         //with vertices color
-        objects.add(new Object2d(
-                        Arrays.asList(
-                            new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.vert",GL_VERTEX_SHADER)
-                            ,new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.frag",GL_FRAGMENT_SHADER)
-                        ), new ArrayList<>(
-                            List.of(
-                                new Vector3f(0.0f,0.5f,0.0f),
-                                new Vector3f(-0.5f,-0.5f,0.0f),
-                                new Vector3f(0.5f,-0.5f,0.0f)
-                            )
-                        ), new ArrayList<>(
-                                List.of(
-                                        new Vector3f(1.0f,0.0f,0.0f),
-                                        new Vector3f(0.0f,1.0f,0.0f),
-                                        new Vector3f(0.0f,0.0f,1.0f)
-                                )
-                        )
-                )
-        );
+//        objects.add(new Object2d(
+//                        Arrays.asList(
+//                            new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.vert",GL_VERTEX_SHADER)
+//                            ,new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.frag",GL_FRAGMENT_SHADER)
+//                        ), new ArrayList<>(
+//                            List.of(
+//                                new Vector3f(0.0f,0.5f,0.0f),
+//                                new Vector3f(-0.5f,-0.5f,0.0f),
+//                                new Vector3f(0.5f,-0.5f,0.0f)
+//                            )
+//                        ), new ArrayList<>(
+//                                List.of(
+//                                        new Vector3f(1.0f,0.0f,0.0f),
+//                                        new Vector3f(0.0f,1.0f,0.0f),
+//                                        new Vector3f(0.0f,0.0f,1.0f)
+//                                )
+//                        )
+//                )
+//        );
+//        objectsRectangle.add(new Rectangle(
+//                Arrays.asList(
+//                    new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
+//                    ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
+//                ), new ArrayList<>(
+//                    List.of(
+//                        new Vector3f(0.0f,0.0f,0.0f),
+//                        new Vector3f(0.5f,0.0f,0.0f),
+//                        new Vector3f(0.0f,0.5f,0.0f),
+//                        new Vector3f(0.5f,0.5f,0.0f)
+//                    )
+//                ),
+//                new Vector4f(0.0f,1.0f,1.0f,1.0f),
+//                Arrays.asList(0,1,2,1,2,3)
+//            )
+//        );
     }
 
     public void loop(){
         while(window.isOpen()){
             window.update();
             //warna dibagi 255 (r/255,g/255,b/255)
-            glClearColor(0.0f,0.0f,0.0f,0.0f);
+            glClearColor(0.0f,0.0f,1.0f,0.0f);
             GL.createCapabilities();
             //code
             //dibawah createcapabilities
-            for(Object2d object:objects){
-                object.drawwithVerticesColor();
+//            for(Object2d object:objects){
+//                object.drawwithVerticesColor();
+//            }
+            for(Rectangle object2:objectsRectangle){
+                object2.draw();
             }
 
 
